--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.10.11",
+    "joi": "^13.1.0",
+    "mongoose": "^5.10.13",
     "nodemon": "^2.0.6"
+  },
+  "devDependencies": {
+    "jshint": "^2.12.0"
   }
 }
