--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "config": "^3.3.2",
+    "debug": "^4.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "helmet": "^4.2.0",
     "joi": "^13.1.0",
     "mongoose": "^5.10.13",
-    "nodemon": "^2.0.6"
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.6",
+    "pug": "^3.0.0"
   },
   "devDependencies": {
     "jshint": "^2.12.0"
