--- a/vidly-app/package.json
+++ b/vidly-app/package.json
@@ -13,10 +13,13 @@
     "bcrypt": "^5.0.0",
     "config": "^3.3.2",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "fawn": "^2.1.5",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "mongoose": "^5.10.15",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "winston": "^3.3.3",
+    "winston-mongodb": "^5.0.5"
   }
 }
